Security Audit: Fixed XSS vulnerabilities, added security headers, and cleaned up gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,15 @@
 # Local Netlify folder
-.netlify
+.netlify/
+.ntli/
+
+# Build artifacts
+dist/
+build/
+node_modules/
+
+# OS/Editor files
+.DS_Store
+Thumbs.db
+.vscode/
+.idea/
+*.log
